RESOLVED FIXED 217044
REGRESSION(r267688) [GTK] Many compositing timeouts
https://bugs.webkit.org/show_bug.cgi?id=217044
Summary REGRESSION(r267688) [GTK] Many compositing timeouts
Lauro Moura
Reported 2020-09-27 19:54:12 PDT
After r267688, many compositing tests are timing out in the GTK bots, likely due to missing either the isolatedUpdateRendering() call or calling finalizeRenderingUpdate() in some CoordinatedGraphics classes. Patch in the works. Sample test run: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r267688%20(16088)/results.html
Attachments
Patch (3.14 KB, patch)
2020-09-27 19:59 PDT, Lauro Moura
no flags
Lauro Moura
Comment 1 2020-09-27 19:59:21 PDT
Lauro Moura
Comment 2 2020-09-27 21:36:41 PDT
Comment on attachment 409866 [details] Patch cq+ 'ing as the failure does not seems to be related to the patch.
EWS
Comment 3 2020-09-27 21:39:33 PDT
Committed r267691: <https://trac.webkit.org/changeset/267691> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409866 [details].
Radar WebKit Bug Importer
Comment 4 2020-09-27 21:40:19 PDT
Simon Fraser (smfr)
Comment 5 2020-09-28 08:25:45 PDT
Thanks for the fix!
Note You need to log in before you can comment on or make changes to this bug.