REGRESSION(r267688) [GTK] Many compositing timeouts https://bugs.webkit.org/show_bug.cgi?id=217044

Reviewed by Darin Adler.

Especulative fix by adding missing finalize step to
updateRendering (or calling isolatedUpdateRendering).

Covered by existing tests.

* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::updateBackingStoreState):
Call finalizeUpdateRendering.
(WebKit::DrawingAreaCoordinatedGraphics::display): Ditto.
* WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.cpp:
(WebKit::LayerTreeHost::flushAndRenderLayers): Call
isolatedUpdateRendering instead of updateRendering on the corePage().


Canonical link: https://commits.webkit.org/229831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267691 268f45cc-cd09-0410-ab3c-d52691b4dbfc